[package]
name = "phone-number"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
regex = "1.9.4"
reqwest = { version = "0.11.20", features = ["blocking"] }
